--- a/module11.html
+++ b/module11.html
@@ -9,15 +9,15 @@
 	
 	<h2>Video</h2>
 		<video width="320" height="240" controls>
-			<source src="jisoomv.mp4" type="video/mp4">
-			<source src="C:\Users\justi\OneDrive\Desktop\Jardin Web Design\musicvid.mp4" type="video/webm">
+			<source src="./WDAP/musicvid.mp4" type="video/mp4">
+			<source src="./WDAP/musicvid.mp4" type="video/webm">
 			Your browser does not support the video tag.
 		</video>
 	
 	<h2>Audio</h2>
 		<audio controls>
-			<source src="jisooaudio.mp3." type="audio/mp3">
-			<source src="C:\Users\justi\OneDrive\Desktop\Jardin Web Design\Dilaw performs Uhaw (Tayong Lahat) LIVE on Wish 107.5 Bus.mp3" type="audio/ogg"
+			<source src="./WDAP/song.mp3" type="audio/mp3">
+			<source src="./WDAP/song.mp3" type="audio/ogg"
 			Your browser does not support the audio tag.
 		</audio>
 	
